# fast-explorer

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  appcast.xml
.github/workflows/: release.yml
appcast/: appcast.xml
cmake/: check-winui-lite-isolation.cmake
docs/: .pdca-status.json  RELEASING.md  m8-followup.md  refactor-completion.md  refactor-plan.html  ui-baseline.html  ui-winui3-feasibility.html  usage-guide.md
docs/01-plan/features/: fast-explorer-core.plan.md
docs/02-design/features/: address-bar-toolbar.design.md  fast-explorer-core.design.md
docs/02-design/runbooks/: m7-1hour-soak-checklist.md  m9-dual-pane-soak-checklist.md
docs/05-report/features/: fast-explorer-core.report.md
docs/handoffs/: 2026-05-14_19-58-49_m1-done-m2-substep-2-complete.md  2026-05-15_m2-m3-m4-complete.md  2026-05-16_m5-m6-tech-debt-complete.md  2026-05-17_m6-close-m7-prep-measurement.md  2026-05-18_m10-m12-marathon.md  2026-05-18_m6srp-check-m8-m9-marathon.md  2026-05-18_m9-a6-a7-followup.md  2026-05-20_v0.3.0-shipped-v0.4.0-brief.md  2026-05-21_v0.4.0-shipped.md  2026-05-28_tabs-shipped.md  2026-05-28_winui-lite-refactor-shipped.md
docs/handoffs/migration/: README.md
docs/superpowers/plans/: 2026-05-20-multi-pane-splitter.md  2026-05-22-file-grouping.md  2026-05-28-tabs.md
docs/superpowers/specs/: 2026-05-20-multi-pane-splitter-design.md  2026-05-22-file-grouping-design.md  2026-05-28-tabs-design.md
examples/minimal-window/: in-memory-item-source.cpp  in-memory-item-source.h  main.cpp  noop-adapters.h
lib/winui_lite/chrome/: _placeholder.cpp  cmd-packing.h  command-router.cpp  command-router.h  dark-scrollbar-hook.cpp  dispinfo-histogram.cpp  dispinfo-histogram.h  layout-preset.h  pane-layout.cpp  pane-layout.h  pane-manager.h  pane-splitter.cpp  pane-splitter.h  pane-toolbar-row.cpp  pane-toolbar-row.h  splitter-ratios.h  status-bar.cpp  status-bar.h  theme-watcher.cpp  theme-watcher.h  window-base.cpp  window-base.h
lib/winui_lite/ports/: change-notifier.h  clipboard-backend.h  context-menu.h  drag-drop-backend.h  item-activator.h  item-dispatcher.h  item-source.h  settings-store.h
lib/winui_lite/widgets/: address-input.cpp  address-input.h  tab-strip-geometry.cpp  tab-strip-geometry.h  tab-strip.cpp  tab-strip.h
resources/: FastExplorer.exe.manifest  FastExplorer.rc  FastExplorer.rc.in  resource-ids.h
scripts/: bench-compare.ps1  release-appcast.py
src/app/: app-services.cpp  app-services.h  main.cpp
src/bench/: bench-cli.cpp  bench-cli.h  bench-json.cpp  bench-json.h  dataset-generator.cpp  dataset-generator.h  enumeration-bench.cpp  enumeration-bench.h  head-to-head-bench.cpp  head-to-head-bench.h  main.cpp
src/core/: crash-handler.cpp  crash-handler.h  directory-enumerator.cpp  directory-enumerator.h  file-entry.h  file-grouping.cpp  file-grouping.h  file-model-store.cpp  file-model-store.h  file-sort.cpp  file-sort.h  fs-backend.h  fs-watcher.cpp  fs-watcher.h  layout-orientation.h  layout-preset.h  memory-fs-backend.cpp  memory-fs-backend.h  name-arena.cpp  name-arena.h  path-utils.cpp  path-utils.h  perf-tracker.cpp  perf-tracker.h  process-memory.cpp  process-memory.h  ring-logger.cpp  ring-logger.h  settings-store.cpp  settings-store.h  text-utf.cpp  text-utf.h  win32-fs-backend.cpp  win32-fs-backend.h
src/explorer/: address-bar-popup.cpp  clipboard-ops.cpp  column-formatter.cpp  column-formatter.h  cut-state-tracker.cpp  cut-state-tracker.h  drop-source.cpp  drop-target.cpp  drop-target.h  extension-icon-cache.cpp  extension-icon-cache.h  filter-pattern.cpp  filter-pattern.h  folder-name.cpp  format-cache.cpp  format-cache.h  icon-cache-coordinator.cpp  icon-cache.cpp  icon-provider.cpp  icon-provider.h  label-edit-controller.cpp  label-edit-controller.h  listview-group-callback.cpp  main-window-commands.cpp  main-window.cpp  main-window.h  messages.h  pane-controller.cpp  pane-controller.h  pane-sort-coordinator.cpp  pane-sort-coordinator.h  pane-tab-host-state.h  pane-tab-host.cpp  pane-tab-host.h  result-channel.h  search-popup.cpp  selection-sync.cpp  selection-sync.h  shell-actions.cpp  shell-bind.cpp  (+9 more)
src/explorer/adapters/: local-settings-store.cpp  local-settings-store.h  (+11 more)
src/ui/: address-bar-popup.cpp  address-bar-popup.h  clipboard-ops.cpp  clipboard-ops.h  column-formatter.cpp  column-formatter.h  com-raii.h  cut-state-tracker.cpp  dark-scrollbar-hook.cpp  dark-scrollbar-hook.h  dark-scrollbar-subclass.cpp  dark-scrollbar-subclass.h  dispinfo-histogram.cpp  dpi-scale.h  drop-source.cpp  drop-source.h  drop-target.cpp  drop-target.h  extension-icon-cache.cpp  filter-pattern.cpp  filter-pattern.h  folder-name.cpp  folder-name.h  format-cache.cpp  format-cache.h  icon-cache-coordinator.cpp  icon-cache-coordinator.h  icon-cache.cpp  icon-cache.h  icon-provider.cpp  icon-provider.h  jthread-utils.h  label-edit-controller.cpp  label-edit-controller.h  listview-group-callback.cpp  listview-group-callback.h  main-window-commands.cpp  main-window.cpp  main-window.h  messages.h  (+31 more)
tests/: adapter-cell-tests.cpp  bench-cli-tests.cpp  bench-fs-helper.h  bench-json-tests.cpp  column-formatter-tests.cpp  command-router-tests.cpp  dataset-generator-tests.cpp  directory-enumerator-tests.cpp  dispinfo-histogram-tests.cpp  dpi-scale-tests.cpp  enumeration-bench-tests.cpp  extension-icon-cache-tests.cpp  file-entry-tests.cpp  file-grouping-tests.cpp  file-model-store-tests.cpp  file-sort-tests.cpp  filter-pattern-tests.cpp  folder-name-tests.cpp  format-cache-tests.cpp  fs-backend-tests.cpp  head-to-head-bench-tests.cpp  icon-cache-tests.cpp  icon-provider-tests.cpp  label-edit-controller-tests.cpp  layout-preset-tests.cpp  memory-fs-backend-tests.cpp  name-arena-tests.cpp  pane-controller-tests.cpp  pane-layout-tests.cpp  pane-manager-tests.cpp  pane-sort-coordinator-tests.cpp  pane-tab-host-state-tests.cpp  path-utils-tests.cpp  perf-tracker-tests.cpp  ports-contract-tests.cpp  process-memory-tests.cpp  result-channel-tests.cpp  selection-sync-tests.cpp  settings-store-tests.cpp  shell-worker-tests.cpp  (+9 more)
(+15 files in other folders)
